# Chatbot-training

./: README.md  app.py  localollama.py  main.py  pyproject.toml
Agents/: agents.ipynb
Basics of LLM/: localollama.py
Langgraph/: Pydantic.ipynb
RAG/: README.md  rag1.ipynb  simplyrag.ipynb  speech.txt
api/: app.py  app1.py  client.py
