[project]
name = "llm-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.133.0",
    "langchain-google-genai>=4.2.1",
    "langchain-openai>=1.1.10",
    "langserve>=0.3.3",
    "sse-starlette>=3.2.0",
    "streamlit>=1.54.0",
    "uvicorn>=0.41.0",
]
